# NedoBot

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  bugs.md  docker-compose.yml
config/: mcp_db_manifest.toml
docs/: ASK_MVP_PLAN.md  AUDIT_2026-07-05.md  CHAT_RETRIEVAL_TODO.md  REFACTOR_DONE.md  REFACTOR_NEXT.md  SEARCH_PLAN.md  SEARCH_SUBAGENT_PROMPTS.md  SEARCH_TODO.md  TECHNICAL.md  custom_emoji_ids.md  custom_emoji_ids.tsv  custom_emoji_stickers.tsv
migrations/: 20260629173000_init.sql  20260629190000_messages_and_comments.sql  20260629223000_post_memory_notes.sql  20260629224500_memory_note_merging.sql  20260630190000_chat_stats.sql  20260630193000_backfill_chat_stats.sql  20260630203000_telegram_chat_users.sql  20260701123000_reaction_event_dedup.sql  20260701133000_deduplicate_reaction_events.sql  20260701150000_voice_transcription_jobs.sql  20260702090000_message_edits_and_bot_deletes.sql  20260702100000_spam_review_fields.sql  20260702101000_telegram_messages_updated_at.sql  20260702110000_user_profile_details.sql  20260702113000_spam_types.sql  20260702114000_spam_profile_labels.sql  20260702120000_user_personal_channel.sql  20260703180000_new_user_profile_audits.sql  20260703183000_new_user_profile_audit_feminine_name.sql  20260703190000_reaction_counts_bigint.sql  20260706120000_search_runs.sql  20260709190000_llm_generation_attempts.sql  20260713193000_llm_generation_search_provenance.sql  20260716100000_profile_identity_observations.sql  20260716110000_avatar_analysis_persistence.sql  20260716120000_avatar_analysis_job_features.sql  (+13 more)
(+86 files in other folders)
