[package]
name = "tg_ai_bot_teloxide"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1"
async-openai = { version = "0.41", features = ["chat-completion"] }
async-trait = "0.1"
base64 = "0.22"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json", "multipart", "socks"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono", "uuid"] }
teloxide = { version = "0.13", features = ["macros"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-std", "io-util", "process", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
